--- a/libraries/FlowCytometrySoftware.html
+++ b/libraries/FlowCytometrySoftware.html
@@ -1768,13 +1768,15 @@ selected by sampleType (different sampleTypes require different settings)</p>
 145
 146
 147
-148</pre>
+148
+149</pre>
     </td>
     <td>
       <pre class="code"><span class="info file"># File 'FlowCytometrySoftware.rb', line 132</span>
 
 <span class='kw'>def</span> <span class='id identifier rubyid_apply_settings'>apply_settings</span><span class='lparen'>(</span><span class='label'>instrument:</span><span class='rparen'>)</span>
-  <span class='kw'>if</span> <span class='id identifier rubyid_instrument'>instrument</span><span class='period'>.</span><span class='id identifier rubyid_experimental_item'>experimental_item</span><span class='period'>.</span><span class='id identifier rubyid_object_type'>object_type</span><span class='period'>.</span><span class='id identifier rubyid_name'>name</span><span class='period'>.</span><span class='id identifier rubyid_downcase'>downcase</span><span class='period'>.</span><span class='id identifier rubyid_include?'>include?</span> <span class='tstring'><span class='tstring_beg'>&#39;</span><span class='tstring_content'>beads</span><span class='tstring_end'>&#39;</span></span>
+    <span class='id identifier rubyid_log_info'>log_info</span> <span class='tstring'><span class='tstring_beg'>&#39;</span><span class='tstring_content'>instrument.experimental_item.object_type.name.downcase</span><span class='tstring_end'>&#39;</span></span><span class='comma'>,</span> <span class='id identifier rubyid_instrument'>instrument</span><span class='period'>.</span><span class='id identifier rubyid_experimental_item'>experimental_item</span><span class='period'>.</span><span class='id identifier rubyid_object_type'>object_type</span><span class='period'>.</span><span class='id identifier rubyid_name'>name</span><span class='period'>.</span><span class='id identifier rubyid_downcase'>downcase</span>
+  <span class='kw'>if</span> <span class='id identifier rubyid_instrument'>instrument</span><span class='period'>.</span><span class='id identifier rubyid_experimental_item'>experimental_item</span><span class='period'>.</span><span class='id identifier rubyid_object_type'>object_type</span><span class='period'>.</span><span class='id identifier rubyid_name'>name</span><span class='period'>.</span><span class='id identifier rubyid_downcase'>downcase</span><span class='period'>.</span><span class='id identifier rubyid_include?'>include?</span> <span class='tstring'><span class='tstring_beg'>&#39;</span><span class='tstring_content'>bead</span><span class='tstring_end'>&#39;</span></span>
     <span class='id identifier rubyid_sample_type_name'>sample_type_name</span> <span class='op'>=</span> <span class='id identifier rubyid_instrument'>instrument</span><span class='period'>.</span><span class='id identifier rubyid_experimental_item'>experimental_item</span><span class='period'>.</span><span class='id identifier rubyid_sample'>sample</span><span class='period'>.</span><span class='id identifier rubyid_sample_type'>sample_type</span><span class='period'>.</span><span class='id identifier rubyid_name'>name</span><span class='period'>.</span><span class='id identifier rubyid_to_sym'>to_sym</span>
   <span class='kw'>else</span>
     <span class='id identifier rubyid_sample_type_name'>sample_type_name</span> <span class='op'>=</span> <span class='id identifier rubyid_collection_from'>collection_from</span><span class='lparen'>(</span><span class='id identifier rubyid_instrument'>instrument</span><span class='period'>.</span><span class='id identifier rubyid_experimental_item'>experimental_item</span><span class='rparen'>)</span><span class='period'>.</span><span class='id identifier rubyid_matrix'>matrix</span><span class='period'>.</span><span class='id identifier rubyid_flatten'>flatten</span><span class='period'>.</span><span class='id identifier rubyid_uniq'>uniq</span><span class='period'>.</span><span class='id identifier rubyid_reject'>reject</span> <span class='lbrace'>{</span><span class='op'>|</span><span class='id identifier rubyid_sid'>sid</span><span class='op'>|</span> <span class='id identifier rubyid_sid'>sid</span> <span class='op'>==</span> <span class='op'>-</span><span class='int'>1</span> <span class='rbrace'>}</span><span class='period'>.</span><span class='id identifier rubyid_map'>map</span> <span class='lbrace'>{</span><span class='op'>|</span><span class='id identifier rubyid_sid'>sid</span><span class='op'>|</span> <span class='id identifier rubyid_s'>s</span> <span class='op'>=</span> <span class='const'>Sample</span><span class='period'>.</span><span class='id identifier rubyid_find'>find</span><span class='lparen'>(</span><span class='id identifier rubyid_sid'>sid</span><span class='rparen'>)</span><span class='semicolon'>;</span> <span class='id identifier rubyid_s'>s</span><span class='period'>.</span><span class='id identifier rubyid_sample_type'>sample_type</span><span class='period'>.</span><span class='id identifier rubyid_name'>name</span> <span class='rbrace'>}</span><span class='period'>.</span><span class='id identifier rubyid_uniq'>uniq</span><span class='period'>.</span><span class='id identifier rubyid_first'>first</span><span class='period'>.</span><span class='id identifier rubyid_to_sym'>to_sym</span>
@@ -1821,7 +1823,6 @@ selected by sampleType (different sampleTypes require different settings)</p>
       <pre class="lines">
 
 
-163
 164
 165
 166
@@ -1857,10 +1858,11 @@ selected by sampleType (different sampleTypes require different settings)</p>
 196
 197
 198
-199</pre>
+199
+200</pre>
     </td>
     <td>
-      <pre class="code"><span class="info file"># File 'FlowCytometrySoftware.rb', line 163</span>
+      <pre class="code"><span class="info file"># File 'FlowCytometrySoftware.rb', line 164</span>
 
 <span class='kw'>def</span> <span class='id identifier rubyid_export_save_and_upload_measurement_data'>export_save_and_upload_measurement_data</span><span class='lparen'>(</span><span class='label'>instrument:</span><span class='comma'>,</span> <span class='label'>timepoint:</span><span class='rparen'>)</span>
   <span class='id identifier rubyid_sw'>sw</span> <span class='op'>=</span> <span class='id identifier rubyid_instrument'>instrument</span><span class='period'>.</span><span class='id identifier rubyid_software'>software</span>
@@ -1931,13 +1933,13 @@ workspace created on the Accuri Flow Cytometer</p>
       <pre class="lines">
 
 
-227
 228
 229
-230</pre>
+230
+231</pre>
     </td>
     <td>
-      <pre class="code"><span class="info file"># File 'FlowCytometrySoftware.rb', line 227</span>
+      <pre class="code"><span class="info file"># File 'FlowCytometrySoftware.rb', line 228</span>
 
 <span class='kw'>def</span> <span class='id identifier rubyid_get_experiment_filename'>get_experiment_filename</span><span class='lparen'>(</span><span class='label'>instrument:</span><span class='rparen'>)</span>
   <span class='id identifier rubyid_timepoint'>timepoint</span> <span class='op'>=</span> <span class='const'>Time</span><span class='period'>.</span><span class='id identifier rubyid_now'>now</span>
@@ -1963,13 +1965,13 @@ workspace created on the Accuri Flow Cytometer</p>
       <pre class="lines">
 
 
-282
 283
 284
-285</pre>
+285
+286</pre>
     </td>
     <td>
-      <pre class="code"><span class="info file"># File 'FlowCytometrySoftware.rb', line 282</span>
+      <pre class="code"><span class="info file"># File 'FlowCytometrySoftware.rb', line 283</span>
 
 <span class='kw'>def</span> <span class='id identifier rubyid_get_measurement_filename'>get_measurement_filename</span><span class='lparen'>(</span><span class='label'>measurement_item:</span><span class='comma'>,</span> <span class='label'>timepoint:</span><span class='rparen'>)</span>
   <span class='id identifier rubyid_mt'>mt</span> <span class='op'>=</span> <span class='id identifier rubyid_measurement_type'>measurement_type</span><span class='period'>.</span><span class='id identifier rubyid_to_s'>to_s</span><span class='period'>.</span><span class='id identifier rubyid_gsub'>gsub</span><span class='lparen'>(</span><span class='tstring'><span class='tstring_beg'>&#39;</span><span class='tstring_content'> </span><span class='tstring_end'>&#39;</span></span><span class='comma'>,</span> <span class='tstring'><span class='tstring_beg'>&#39;</span><span class='tstring_end'>&#39;</span></span><span class='rparen'>)</span> 
@@ -2125,16 +2127,16 @@ workspace</p>
       <pre class="lines">
 
 
-202
 203
 204
 205
 206
 207
-208</pre>
+208
+209</pre>
     </td>
     <td>
-      <pre class="code"><span class="info file"># File 'FlowCytometrySoftware.rb', line 202</span>
+      <pre class="code"><span class="info file"># File 'FlowCytometrySoftware.rb', line 203</span>
 
 <span class='kw'>def</span> <span class='id identifier rubyid_go_to_computer'>go_to_computer</span><span class='lparen'>(</span><span class='id identifier rubyid_instrument'>instrument</span><span class='rparen'>)</span>
   <span class='id identifier rubyid_show'>show</span> <span class='kw'>do</span>
@@ -2174,7 +2176,6 @@ workspace</p>
       <pre class="lines">
 
 
-211
 212
 213
 214
@@ -2187,10 +2188,11 @@ workspace</p>
 221
 222
 223
-224</pre>
+224
+225</pre>
     </td>
     <td>
-      <pre class="code"><span class="info file"># File 'FlowCytometrySoftware.rb', line 211</span>
+      <pre class="code"><span class="info file"># File 'FlowCytometrySoftware.rb', line 212</span>
 
 <span class='kw'>def</span> <span class='id identifier rubyid_open_software'>open_software</span><span class='lparen'>(</span><span class='id identifier rubyid_instrument'>instrument</span><span class='rparen'>)</span>
   <span class='kw'>if</span> <span class='lparen'>(</span><span class='op'>!</span><span class='id identifier rubyid_instrument'>instrument</span><span class='period'>.</span><span class='id identifier rubyid_software_open'>software_open</span><span class='rparen'>)</span>
@@ -2237,7 +2239,6 @@ workspace</p>
       <pre class="lines">
 
 
-233
 234
 235
 236
@@ -2261,10 +2262,11 @@ workspace</p>
 254
 255
 256
-257</pre>
+257
+258</pre>
     </td>
     <td>
-      <pre class="code"><span class="info file"># File 'FlowCytometrySoftware.rb', line 233</span>
+      <pre class="code"><span class="info file"># File 'FlowCytometrySoftware.rb', line 234</span>
 
 <span class='kw'>def</span> <span class='id identifier rubyid_read_calibration'>read_calibration</span><span class='lparen'>(</span><span class='label'>instrument:</span> <span class='id identifier rubyid_instrument'>instrument</span><span class='rparen'>)</span>
   <span class='id identifier rubyid_go_to_computer'>go_to_computer</span><span class='lparen'>(</span><span class='id identifier rubyid_instrument'>instrument</span><span class='rparen'>)</span>
@@ -2322,7 +2324,6 @@ workspace</p>
       <pre class="lines">
 
 
-260
 261
 262
 263
@@ -2342,10 +2343,11 @@ workspace</p>
 277
 278
 279
-280</pre>
+280
+281</pre>
     </td>
     <td>
-      <pre class="code"><span class="info file"># File 'FlowCytometrySoftware.rb', line 260</span>
+      <pre class="code"><span class="info file"># File 'FlowCytometrySoftware.rb', line 261</span>
 
 <span class='kw'>def</span> <span class='id identifier rubyid_read_plate'>read_plate</span><span class='lparen'>(</span><span class='label'>instrument:</span><span class='rparen'>)</span>
   <span class='id identifier rubyid_go_to_computer'>go_to_computer</span><span class='lparen'>(</span><span class='id identifier rubyid_instrument'>instrument</span><span class='rparen'>)</span>
@@ -2583,13 +2585,13 @@ upload data to Aq</p>
       <pre class="lines">
 
 
-157
 158
 159
-160</pre>
+160
+161</pre>
     </td>
     <td>
-      <pre class="code"><span class="info file"># File 'FlowCytometrySoftware.rb', line 157</span>
+      <pre class="code"><span class="info file"># File 'FlowCytometrySoftware.rb', line 158</span>
 
 <span class='kw'>def</span> <span class='id identifier rubyid_take_calibration_and_upload_data'>take_calibration_and_upload_data</span><span class='lparen'>(</span><span class='label'>instrument:</span><span class='rparen'>)</span>
   <span class='id identifier rubyid_timepoint'>timepoint</span> <span class='op'>=</span> <span class='id identifier rubyid_read_calibration'>read_calibration</span><span class='lparen'>(</span><span class='label'>instrument:</span> <span class='id identifier rubyid_instrument'>instrument</span><span class='rparen'>)</span>
@@ -2627,13 +2629,13 @@ data to Aq</p>
       <pre class="lines">
 
 
-151
 152
 153
-154</pre>
+154
+155</pre>
     </td>
     <td>
-      <pre class="code"><span class="info file"># File 'FlowCytometrySoftware.rb', line 151</span>
+      <pre class="code"><span class="info file"># File 'FlowCytometrySoftware.rb', line 152</span>
 
 <span class='kw'>def</span> <span class='id identifier rubyid_take_measurement_and_upload_data'>take_measurement_and_upload_data</span><span class='lparen'>(</span><span class='label'>instrument:</span><span class='rparen'>)</span>
   <span class='id identifier rubyid_timepoint'>timepoint</span> <span class='op'>=</span> <span class='id identifier rubyid_read_plate'>read_plate</span><span class='lparen'>(</span><span class='label'>instrument:</span> <span class='id identifier rubyid_instrument'>instrument</span><span class='rparen'>)</span>
