--- a/libraries/PlateReaderSoftware.html
+++ b/libraries/PlateReaderSoftware.html
@@ -784,6 +784,16 @@ function mainFocus() {
   setTimeout(function() { $('#main').focus(); }, 10);
 }
 
+function navigationChange() {
+  // This works around the broken anchor navigation with the YARD template.
+  window.onpopstate = function() {
+    var hash = window.location.hash;
+    if (hash !== '' && $(hash)[0]) {
+      $(hash)[0].scrollIntoView();
+    }
+  };
+}
+
 $(document).ready(function() {
   navResizer();
   navExpander();
@@ -796,6 +806,7 @@ $(document).ready(function() {
   constantSummaryToggle();
   generateTOC();
   mainFocus();
+  navigationChange();
 });
 
 })();
@@ -1007,8 +1018,7 @@ $(document).ready(function() {
       
         &mdash;
         <div class='inline'>
-<p>is the symbol created in the upload show block and used to access file
-uploaded</p>
+<p>is the symbol created in the upload show block and used to access file uploaded</p>
 </div>
       
     </li>
